--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             la perseverancia, confianza y la facilidad de aprendizaje🤓📚</p>
     
     <ul>
-        <li class="badge">🎨🧩React🎨🧩</li>
+        <li class="badge">🎨🧩Base de Datos🎨🧩</li>
         <li class="badge">☕💻SpringBoot☕💻</li>
         <li class="badge">🛡️🔒💻Cybersecurity🛡️🔒💻</li>
         <li class="badge">💾💻🔋JavaScrpit💾💻🔋</li>
